--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,22 @@
 <h1 id="title">
     Counter
 </h1>
+
 <body>
-    <main>
-        <span id="span">0</span>
-    </main>
+    <p id="value">0</p>
+    <div class="parent">
+        <button class="btn increase">
+            +
+        </button>
+        <button class="btn reset">
+            RESET
+        </button>
+        <button class="btn decrease">
+            -
+        </button>
+    </div>
 </body>
-<div class="parent">
-<button class="positive">+</button>
-<button id="wipe">RESET</button>
-<button class="negative">-</button>
-</div>
 <script src="script.js">
 </script>
+
 </html>
