--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Counter</title>
     <link rel="stylesheet" href=styles.css>
 </head>
+    <p><a href="https://github.com/Slurpzy123/counter" target="_blank">
+        <img src="image.png" alt="logo" id="logo">
+        </a></p>
 <h1 id="title">
     Counter
 </h1>
