--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <p id="value">0</p>
     <div class="parent">
-        <button class="btn increase">
+        <button class="btn increase" onclick="increment()">
             +
         </button>
-        <button class="btn reset">
+        <button class="btn reset" onclick="reset()">
             RESET
         </button>
-        <button class="btn decrease">
+        <button class="btn decrease" onclick="decrement()">
             -
         </button>
     </div>
